rabbitmq-server: maintainer update to version 2.0.0. (#26312)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71162 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/rabbitmq-server/Portfile
+++ b/dports/net/rabbitmq-server/Portfile
@@ -3,7 +3,7 @@
 
 PortSystem 1.0
 name		rabbitmq-server
-version		1.8.1
+version		2.0.0
 categories	net 
 maintainers	paperplanes.de:meyer rabbitmq.com:tonyg openmaintainer
 platforms	darwin
@@ -18,9 +18,9 @@ homepage        http://www.rabbitmq.com/
 master_sites    http://www.rabbitmq.com/releases/rabbitmq-server/v${version}/
 
 checksums \
-    md5 2471bdf0ba77b73aed1cc8eddc10aa19 \
-    sha1 f8a803eb7a5fa78074d47196ed920bf1edcfb240 \
-    rmd160 433cd232c14c1e8dc66e2359da55dd665a9b1ea2
+    md5 04b99018085d4156b404d56377fc1c62 \
+    sha1 3c72e4bd540caa81180701414c9bb5ec298d0365 \
+    rmd160 cb7ad2c8b0282b9d11e4eae47646e6b59e81a8e2
 
 depends_lib	port:erlang
 depends_build	port:xmlto port:libxslt
@@ -75,27 +75,15 @@ post-destroot {
 
     reinplace -E "s:(/etc/rabbitmq/rabbitmq.conf):${prefix}\\1:g" \
         ${realsbin}/rabbitmq-env
-    reinplace -E "s:(CLUSTER_CONFIG_FILE)=/:\\1=${prefix}/:" \
-        ${realsbin}/rabbitmq-multi \
-        ${realsbin}/rabbitmq-server \
-        ${realsbin}/rabbitmqctl
-    reinplace -E "s:(LOG_BASE)=/:\\1=${prefix}/:" \
-        ${realsbin}/rabbitmq-multi \
-        ${realsbin}/rabbitmq-server \
-        ${realsbin}/rabbitmqctl
-    reinplace -E "s:(MNESIA_BASE)=/:\\1=${prefix}/:" \
-        ${realsbin}/rabbitmq-multi \
-        ${realsbin}/rabbitmq-server \
-        ${realsbin}/rabbitmqctl
-    reinplace -E "s:(PIDS_FILE)=/:\\1=${prefix}/:" \
-        ${realsbin}/rabbitmq-multi \
-        ${realsbin}/rabbitmq-server \
-        ${realsbin}/rabbitmqctl
+    foreach var {CONFIG_FILE CLUSTER_CONFIG_FILE LOG_BASE MNESIA_BASE PIDS_FILE} {
+        reinplace -E "s:^($var)=/:\\1=${prefix}/:" \
+            ${realsbin}/rabbitmq-multi \
+            ${realsbin}/rabbitmq-server \
+            ${realsbin}/rabbitmqctl
+    }
 
     xinstall -m 555 ${filespath}/rabbitmq-script-wrapper \
                 ${wrappersbin}/rabbitmq-multi
-    xinstall -m 555 ${filespath}/rabbitmq-asroot-script-wrapper \
-                ${wrappersbin}/rabbitmq-activate-plugins
 
     reinplace -E "s:MACPORTS_PREFIX/bin:${prefix}/bin:" \
                 ${wrappersbin}/rabbitmq-multi
@@ -103,13 +91,8 @@ post-destroot {
                 ${wrappersbin}/rabbitmq-multi
     reinplace -E "s:/var/lib/rabbitmq:${prefix}/var/lib/rabbitmq:" \
                 ${wrappersbin}/rabbitmq-multi
-    reinplace -E "s:/usr/lib/rabbitmq/bin/:${prefix}/lib/rabbitmq/bin/:" \
-                ${wrappersbin}/rabbitmq-activate-plugins
-    reinplace -E "s:/var/lib/rabbitmq:${prefix}/var/lib/rabbitmq:" \
-                ${wrappersbin}/rabbitmq-activate-plugins
     file copy ${wrappersbin}/rabbitmq-multi ${wrappersbin}/rabbitmq-server
     file copy ${wrappersbin}/rabbitmq-multi ${wrappersbin}/rabbitmqctl
-    file copy ${wrappersbin}/rabbitmq-activate-plugins ${wrappersbin}/rabbitmq-deactivate-plugins
 }
 
 pre-install {
