Updated tvdb_api to version 1.5
git-svn-id: https://svn.macports.org/repository/macports/trunk@71163 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-tvdb/Portfile
+++ b/dports/python/py26-tvdb/Portfile
@@ -5,7 +5,7 @@ PortSystem              1.0
 PortGroup               python26 1.0
 
 name                    py26-tvdb
-version                 1.4
+version                 1.5
 platforms               darwin
 maintainers             jameskyle
 description             An easy to use API interface to TheTVDB.com
@@ -15,20 +15,6 @@ master_sites            ${homepage}
 distname                tvdb_api-${version}
 fetch.type              git
 git.url                 git://github.com/dbr/tvdb_api.git
-git.branch              1.4
+git.branch              ${version}
 
-
-build.cmd               ${python.bin} setup_tvdb_api.py --no-user-cfg
-destroot.cmd            ${python.bin} setup_tvdb_api.py --no-user-cfg
 depends_lib-append      port:py26-distribute
-
-post-build {
-    system "cd ${worksrcpath} && \ 
-            ${python.bin} setup_tvnamer.py --no-user-cfg build"
-}
-
-post-destroot {
-  ln -s ${python.pkgd}/tvnamer.py ${destroot}${prefix}/bin/tvnamer.py
-  system "chmod +x ${destroot}${python.pkgd}/tvnamer.py"
-  
-}
