Changed the tvnamer version to 'master' until fixes make it to a version release
git-svn-id: https://svn.macports.org/repository/macports/trunk@71165 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-tvnamer/Portfile
+++ b/dports/python/py26-tvnamer/Portfile
@@ -5,7 +5,7 @@ PortSystem              1.0
 PortGroup               python26 1.0
 
 name                    py26-tvnamer
-version                 2.0
+version                 master
 platforms               darwin
 maintainers             jameskyle
 description             Renames files in a standard way that's easily parsable \
