Ghostscript:  - Force use of the old but stable Artifex Font Scaler (AFS) instead of the new Freetype scaler/renderer, to avoid some glitches.  -- http://bugs.ghostscript.com/show_bug.cgi?id=691592  -- http://ito-hi.blog.so-net.ne.jp/2010-09-03 (Japanese)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71166 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/print/ghostscript/Portfile
+++ b/dports/print/ghostscript/Portfile
@@ -6,7 +6,7 @@ PortGroup       muniversal 1.0
 name            ghostscript
 version         9.00
 set version_sub rc2
-revision        2
+revision        3
 categories      print
 maintainers     takanori openmaintainer
 description     GPL Ghostscript, An interpreter for PostScript and PDF
@@ -79,7 +79,8 @@ configure.cppflags-append       "-isystem${prefix}/include"
 configure.args  --disable-compile-inits \
                 --disable-cups \
                 --disable-gtk \
-                --with-system-libtiff
+                --with-system-libtiff \
+                --disable-freetype
 
 build.target        so
 use_parallel_build  no
