--- a/dports/databases/postgresql90-doc/Portfile
+++ b/dports/databases/postgresql90-doc/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name			postgresql90-doc
-version			9.0beta4
+version			9.0rc1
 categories		databases
 platforms		darwin
 maintainers		mww jwa
@@ -18,9 +18,9 @@ homepage		http://www.postgresql.org/
 master_sites		postgresql:source/v${version}
 distname		postgresql-${version}
 
-checksums           md5     3afdbbe979978af808c0d4703b56499d \
-                    sha1    37d88b605c445e7dd81818fc53e90e0cd2250f37 \
-                    rmd160  31c8e33546fdddda3e4db02942a4a605ad251cf7
+checksums           md5     c10400b541b8ce2e8c083c6538712429 \
+                    sha1    976bc8c2f703dbcdd7fc5ee17fb8217028399ff9 \
+                    rmd160  79e08c3231ec9716786fe07e9429fbdf07025c42
 
 use_bzip2		yes
 dist_subdir		postgresql90
