ffmpeg: add temporary counter-intuitive hack to allow building on single processor machines while further testing proceeds.  The problem is still not well understood but this fix does work and doesn't affect machines with more than one core/processor. See #25926.  In addition, add +verbose_build variant to allow full listing of build commands when debugging.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71172 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/ffmpeg/Portfile
+++ b/dports/multimedia/ffmpeg/Portfile
@@ -78,6 +78,16 @@ depends_lib     port:lame \
                 port:bzip2 \
                 port:zlib
 
+#
+# temporary empirical counter-intuitive hack to enable building on
+# single processor/core machines see #25926
+# TODO: understand the root cause, why this works and/or apply a better fix
+#
+
+if {${build.jobs} < 2} {
+    build.jobs 2
+}
+
 build.cmd       gmake
 
 #
@@ -120,6 +130,10 @@ test.run        yes
 #
 
 universal_variant no
+
+variant verbose_build description {Emit full build commands during build} {
+    patchfiles-append patch-common.mak.diff
+}
 
 post-destroot {
     file mkdir ${destroot}${prefix}/share/doc/${name}
