python/py27-nose: update to 0.11.4
git-svn-id: https://svn.macports.org/repository/macports/trunk@71175 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py27-nose/Portfile
+++ b/dports/python/py27-nose/Portfile
@@ -6,7 +6,7 @@ PortGroup  python27 1.0
 
 set my_name         nose
 name				py27-${my_name}
-version				0.11.3
+version				0.11.4
 categories-append	www
 maintainers			nomaintainer
 description			A Python unittest extension.
@@ -23,14 +23,14 @@ platforms			darwin
 supported_archs		noarch
 
 homepage			http://somethingaboutorange.com/mrl/projects/${my_name}/${version}
-master_sites		${homepage}
+master_sites		http://somethingaboutorange.com/mrl/projects/${my_name}
 distname			${my_name}-${version}
 
 depends_lib			port:py27-distribute
 
-checksums           md5     7f1dc53750811f78bedef9e14a4bc5a5 \
-                    sha1    37c03a5b9738575e25ef99a5ca3b021f66c53421 \
-                    rmd160  9f5e93d9bcfa2f294f97f6a5c31e462eb13e43e2
+checksums           md5     2892099d6b1316a40a21b3d63422a3b4 \
+                    sha1    c05c4fc349d1878e2170132d90d268e606f4031c \
+                    rmd160  f77b91f003fcf8a582d666122c3d43ad43e6acc3
 
 post-patch {
 	reinplace "s|man/man|share/man/man|" ${worksrcpath}/setup.py
@@ -56,5 +56,5 @@ test.run  yes
 test.cmd  ${python.bin} setup.py test
 
 livecheck.type   regex
-livecheck.url    ${homepage}
+livecheck.url    ${master_sites}
 livecheck.regex     "${my_name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
