eigen: follow stealth update (#26347)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71184 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/eigen/Portfile
+++ b/dports/math/eigen/Portfile
@@ -5,6 +5,7 @@ PortGroup           cmake 1.0
 
 name                eigen
 version             2.0.15
+revision            1
 license             GPL-2+ LGPL-3+
 categories          math science
 maintainers         nomaintainer
@@ -15,11 +16,13 @@ platforms           darwin
 
 master_sites        http://bitbucket.org/eigen/eigen/get/
 distname            ${version}
+# 2.0.15 was stealth updated, ticket #26347
+dist_subdir         ${name}/${version}_${revision}
 use_bzip2           yes
 
-checksums           md5     390a8c72a0ac79ce6766d84ffeaf4ebc \
-                    sha1    25f38a50939b35e482b22221998d862b860dbe9e \
-                    rmd160  0f94999dbb90c4a4a09b4e38f36edec17d1eb1db
+checksums           md5     a96fe69d652d7b3b1d990c99bbc518fb \
+                    sha1    6bf63fa5082ea56324371d89fb366ff4a4f51d61 \
+                    rmd160  2edd3035948cb30dc497740df1fcf30043dfd85d
 
 worksrcdir          ${name}
 
