ffmpeg: make sure we know which gmake is being used.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71185 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/ffmpeg/Portfile
+++ b/dports/multimedia/ffmpeg/Portfile
@@ -88,7 +88,7 @@ if {${build.jobs} < 2} {
     build.jobs 2
 }
 
-build.cmd       gmake
+build.cmd       ${prefix}/bin/gmake
 
 #
 # enable auto configure of mmx and related Intel optimizations by default
