--- a/dports/databases/fastdb/Portfile
+++ b/dports/databases/fastdb/Portfile
@@ -10,8 +10,8 @@ maintainers		nomaintainer
 description		Main Memory Relational Database Management System
 long_description	${description}
 
-homepage		http://www.garret.ru/~knizhnik/fastdb.html
-master_sites	http://www.garret.ru/~knizhnik/
+homepage		http://www.fastdb.org/
+master_sites	${homepage} sourceforge
 checksums		md5 becbe908178c59ea8f5c48f0f32f22f0
 patchfiles		patch-makefile.osx
 
