--- a/dports/databases/fastdb/Portfile
+++ b/dports/databases/fastdb/Portfile
@@ -1,24 +1,29 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem 1.0
+PortSystem          1.0
 
-name			fastdb
-version			3.05
-categories		databases
-platforms		darwin
-maintainers		nomaintainer
-description		Main Memory Relational Database Management System
-long_description	${description}
+name                fastdb
+version             3.05
+categories          databases
+platforms           darwin
+maintainers         nomaintainer
 
-homepage		http://www.fastdb.org/
-master_sites	${homepage} sourceforge
-checksums		md5 becbe908178c59ea8f5c48f0f32f22f0
-patchfiles		patch-makefile.osx
+description         Main Memory Relational Database Management System
 
-worksrcdir		${name}
+long_description    ${description}
 
-use_configure	no
+homepage            http://www.fastdb.org/
+master_sites        ${homepage} sourceforge
 
-build.args		-f makefile.osx PREFIX=${prefix}
+checksums           md5     becbe908178c59ea8f5c48f0f32f22f0
 
-destroot.destdir	-f makefile.osx PREFIX=${destroot}${prefix}
+patchfiles          patch-makefile.osx
+
+worksrcdir          ${name}
+
+use_configure       no
+
+build.args          -f makefile.osx PREFIX=${prefix}
+
+destroot.destdir    -f makefile.osx PREFIX=${destroot}${prefix}
