--- a/dports/databases/fastdb/Portfile
+++ b/dports/databases/fastdb/Portfile
@@ -27,3 +27,6 @@ use_configure       no
 build.args          -f makefile.osx PREFIX=${prefix}
 
 destroot.destdir    -f makefile.osx PREFIX=${destroot}${prefix}
+
+livecheck.type      regex
+livecheck.regex     ${name}-(\[0-9.\]+)${extract.suffix}
