--- a/dports/databases/fastdb/Portfile
+++ b/dports/databases/fastdb/Portfile
@@ -24,9 +24,12 @@ worksrcdir          ${name}
 
 use_configure       no
 
-build.args          -f makefile.osx PREFIX=${prefix}
+build.args          -f makefile.osx \
+                    PREFIX=${prefix} \
+                    CC="${configure.cxx}"
 
-destroot.destdir    -f makefile.osx PREFIX=${destroot}${prefix}
+destroot.destdir    -f makefile.osx \
+                    PREFIX=${destroot}${prefix}
 
 livecheck.type      regex
 livecheck.regex     ${name}-(\[0-9.\]+)${extract.suffix}
