--- a/dports/databases/fastdb/Portfile
+++ b/dports/databases/fastdb/Portfile
@@ -26,7 +26,7 @@ use_configure       no
 
 build.args          -f makefile.osx \
                     PREFIX=${prefix} \
-                    CC="${configure.cxx}"
+                    CC="${configure.cxx} ${configure.cxx_archflags}"
 
 destroot.destdir    -f makefile.osx \
                     PREFIX=${destroot}${prefix}
