--- a/dports/www/apache2/Portfile
+++ b/dports/www/apache2/Portfile
@@ -6,7 +6,7 @@ PortSystem       1.0
 name             apache2
 version          2.2.16
 categories       www
-maintainers      imajes
+maintainers      nomaintainer
 description      The extremely popular second version of the Apache http server 
 long_description \
 	Apache is an HTTP server designed as a plug-in replacement for \
