audio/tagtool: Fix LP64 issue in string handling functions
git-svn-id: https://svn.macports.org/repository/macports/trunk@71197 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/tagtool/Portfile
+++ b/dports/audio/tagtool/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name            tagtool
 version         0.12.3
+revision        1
 categories      audio
 platforms       darwin
 maintainers     raimue
@@ -24,6 +25,8 @@ checksums \
     md5 447b3a505fee68a82f25dcda9377b676 \
     sha1 e7ed4ebf8f9881cf38b2340b18e95947f658308e \
     rmd160 9f5ae223580948c403cd44d82ecef0d03040ff09
+
+patchfiles      patch-str_util-lp64.diff
 
 depends_build   bin:grep:grep \
                 bin:fgrep:grep \
