audio/tagtool: Original homepage is gone, switch to sourceforge project site
git-svn-id: https://svn.macports.org/repository/macports/trunk@71198 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/tagtool/Portfile
+++ b/dports/audio/tagtool/Portfile
@@ -17,7 +17,7 @@ long_description \
     but the most useful features are the ability to \
     easily tag or rename hundreds of files at once, in \
     any desired format.
-homepage        http://pwp.netcabo.pt/paol/tagtool/
+homepage        http://sourceforge.net/projects/tagtool/
 
 master_sites    sourceforge
 use_bzip2       yes
