--- a/dports/devel/msgpack/Portfile
+++ b/dports/devel/msgpack/Portfile
@@ -1,19 +1,23 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem 1.0
+PortSystem          1.0
 
-name                    msgpack
-version                 0.5.0
-categories              devel
-maintainers             gmail.com:naoya.n
-description             Library for a binary-based efficient data interchange format
-homepage                http://msgpack.sourceforge.jp/
-master_sites            sourceforge
-platforms               darwin freebsd
-long_description        MessagePack is a binary-based efficient data interchange \
-                        format that is focused on high performance. \
-                        It is like JSON, but very fast and small.
+name                msgpack
+version             0.5.0
+categories          devel
+platforms           darwin freebsd
 
-checksums               md5 4a0e9ac4697e351bc740aecc091cdf94 \
-                        sha1 63138649bcfe1acdcb21748799f8a7cc62a018d2 \
-                        rmd160 949119d10a29d6c3f1277068b8210f1949239830
+maintainers         gmail.com:naoya.n
+
+description         Library for a binary-based efficient data interchange format
+long_description    MessagePack is a binary-based efficient data interchange \
+                    format that is focused on high performance. \
+                    It is like JSON, but very fast and small.
+
+homepage            http://msgpack.org/
+master_sites        sourceforge
+
+checksums           md5     4a0e9ac4697e351bc740aecc091cdf94 \
+                    sha1    63138649bcfe1acdcb21748799f8a7cc62a018d2 \
+                    rmd160  949119d10a29d6c3f1277068b8210f1949239830
