msgpack: update to version 0.5.4 (#26342)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71200 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/msgpack/Portfile
+++ b/dports/devel/msgpack/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                msgpack
-version             0.5.0
+version             0.5.4
 categories          devel
 platforms           darwin freebsd
 
@@ -18,6 +18,10 @@ long_description    MessagePack is a binary-based efficient data interchange \
 homepage            http://msgpack.org/
 master_sites        sourceforge
 
-checksums           md5     4a0e9ac4697e351bc740aecc091cdf94 \
-                    sha1    63138649bcfe1acdcb21748799f8a7cc62a018d2 \
-                    rmd160  949119d10a29d6c3f1277068b8210f1949239830
+checksums           md5     18d96a3178f7cad73c0ca44f6284ae7d \
+                    sha1    f7e33459a867017d88b2412085229d4153176ab2 \
+                    rmd160  e3e7ab98ec3b72d3b906d0cb8ed94fa4676807c3
+
+livecheck.type      regex
+livecheck.url       ${homepage}
+livecheck.regex     "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
