--- a/dports/math/atlas/Portfile
+++ b/dports/math/atlas/Portfile
@@ -50,6 +50,7 @@ use_parallel_build  no
 build.target        build
 build.dir           ${workpath}/${name}-${version}/build
 
+variant gcc45 conflicts gcc42 gcc43 gcc44 description {build using macports-gcc-4.5} {}
 variant gcc44 conflicts gcc42 gcc43 description {build using macports-gcc-4.4} {}
 variant gcc43 conflicts gcc42 gcc44 conflicts universal description {build using macports-gcc-4.3} {}
 variant gcc42 conflicts gcc43 gcc44 conflicts universal description {build using macports-gcc-4.2} {}
@@ -58,9 +59,11 @@ if { [variant_isset gcc42] } {
   set gccversion    4.2
 } elseif { [variant_isset gcc43] } {
   set gccversion    4.3
-} else {
-  default_variants +gcc44
+} elseif { [variant_isset gcc44 ] } {
   set gccversion    4.4
+} else {
+  default_variants +gcc45
+  set gccversion    4.5
 }
 
 set gccnumber       [join [split ${gccversion} .] ""]
