readline: update to 6.1.002 (#26273, maintainer timeout)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71204 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/readline/Portfile
+++ b/dports/devel/readline/Portfile
@@ -5,9 +5,8 @@ PortGroup       muniversal 1.0
 
 name            readline
 set milestone   6.1
-set patchlevel  000
+set patchlevel  002
 version         ${milestone}.${patchlevel}
-revision        1
 distname        ${name}-${milestone}
 categories      devel
 platforms       darwin freebsd
@@ -43,9 +42,16 @@ post-patch {
     reinplace "s|__MACPORTS_PATCHLEVEL__|${patchlevel}|" ${worksrcpath}/support/shobj-conf
 }
 
-checksums       md5     fc2f7e714fe792db1ce6ddc4c9fb4ef3 \
+checksums       ${distfiles} \
+                md5     fc2f7e714fe792db1ce6ddc4c9fb4ef3 \
                 sha1    54840a0dc907e7fa598d7ffcdcbd17bae69ace83 \
-                rmd160  b50f47a3952e354655056d9684b05ee65027e291
+                rmd160  b50f47a3952e354655056d9684b05ee65027e291 \
+                ${patchname}-001 \
+                sha1 b0bfd7a6693674b915995e6dd513bfdceed98946 \
+                rmd160 b3c9c350089e2fc19c217b14e6058004fda7c5cb \
+                ${patchname}-002 \
+                sha1 5af24e7f33d80b4a588f77153ef7df8d9c043380 \
+                rmd160 2a049b121df86c3a5234b5ca4953cf17b65c4ab3
 
 configure.args  --with-curses
 
@@ -86,8 +92,6 @@ if {[variant_isset universal]} {
                             bash_cv_func_sigsetjmp=present \
                             bash_cv_func_strcoll_broken=no \
                             bash_cv_func_ctype_nonascii=yes
-} elseif {![info exists configure.ld_archflags]} {
-    configure.ldflags-append   ${configure.cc_archflags}
 }
 
 livecheck.version   ${milestone}
