whois and ripe-whois conflict on ${prefix}/bin/whois
git-svn-id: https://svn.macports.org/repository/macports/trunk@71208 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/ripe-whois/Portfile
+++ b/dports/net/ripe-whois/Portfile
@@ -4,6 +4,7 @@
 PortSystem              1.0
 
 name                    ripe-whois
+conflicts               whois
 version                 3.2.2
 categories              net
 platforms               darwin
