--- a/dports/net/whois/Portfile
+++ b/dports/net/whois/Portfile
@@ -13,7 +13,7 @@ PortSystem                  1.0
 PortGroup                   archcheck 1.0
 
 name                        whois
-conflicts                   bahamut
+conflicts                   bahamut ripe-whois
 version                     5.0.7
 categories                  net
 maintainers                 ryandesign
