ripe-whois: fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@71209 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/ripe-whois/Portfile
+++ b/dports/net/ripe-whois/Portfile
@@ -37,3 +37,7 @@ checksums               md5     d25bbe0c5bcf679bd9f9ead30bb0a71a \
 configure.args          --mandir=${prefix}/share/man
 
 destroot.args-append    whoisdatadir=${prefix}/share/doc/${name}
+
+livecheck.type          regex
+livecheck.url           [lindex ${master_sites} 0]
+livecheck.regex         ${name}-client-(\[0-9.\]+)${extract.suffix}
