alienarena: add -DAL_NO_PROTOTYPES to CFLAGS to fix a compile issue on Leopard/Tiger (but others remain)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71211 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/alienarena/Portfile
+++ b/dports/games/alienarena/Portfile
@@ -59,6 +59,11 @@ patchfiles              patch-game-q_shared.h.diff \
 
 use_configure           no
 
+# On Leopard and presumably Tiger:
+# In file included from client/snd_openal.c:37:
+# client/qal.h:34: error: syntax error before 'pqalEnable'
+configure.cflags-append -DAL_NO_PROTOTYPES
+
 platform darwin {
     patchfiles-append   patch-Makefile.diff \
                         patch-client-qal.h.diff \
