OpenSSL requires 'makedepend' to make depends during build.  No rev bump because it's just a build dependency and if one has already built it then there's no need to rebuild it (since clearly makedepend is already installed).  Adding in without a ticket because it's such a simple change.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71212 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/openssl/Portfile
+++ b/dports/devel/openssl/Portfile
@@ -26,6 +26,7 @@ checksums           md5     e3873edfffc783624cfbdb65e2249cbd \
                     rmd160  f46ea1d0875ef523662e652f22faf0f0f261f354
 
 depends_lib		port:zlib
+depends_build           port:makedepend
 
 platform darwin {
 	patchfiles	patch-Makefile.org.diff patch-crypto-Makefile.diff
