alienarena, alienarena-data: Require Snow Leopard for now, until Leopard and Tiger build errors can be worked around
git-svn-id: https://svn.macports.org/repository/macports/trunk@71215 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/alienarena-data/Portfile
+++ b/dports/games/alienarena-data/Portfile
@@ -32,6 +32,22 @@ extract.post_args       -d ${extract.dir} ${worksrcdir}/data1/*
 checksums               sha1    9c982d097d885af0cbd06bfbe6c4185936c43c4d \
                         rmd160  d20e167c66dec8ec072ecbf5833a4a4b46458a17
 
+platform darwin {
+    pre-fetch {
+        # 10.4.11:
+        # ld: common symbols not allowed with MH_DYLIB output format with the -multi_module option
+        # The usual advice is to use -fno-common (e.g. http://gcc.gnu.org/ml/gcc/2005-06/msg00378.html)
+        # but this leads to several "multiple definitions of symbol" errors.
+        # 10.5.8:
+        # In file included from client/snd_openal.c:37:
+        # client/qal.h:108: error: syntax error before 'pqalcCreateContext'
+        if {${os.major} < 10} {
+            ui_error "Alien Arena requires Mac OS X 10.6 or greater at the moment."
+            return -code error "incompatible Mac OS X version"
+        }
+    }
+}
+
 post-extract {
     # Remove pre-compiled Linux binaries that will be compiled properly by the alienarena port.
     eval delete [glob ${worksrcpath}/data1/*.so]
