--- a/dports/games/alienarena/Portfile
+++ b/dports/games/alienarena/Portfile
@@ -44,6 +44,22 @@ depends_lib             port:curl \
 
 depends_run             port:alienarena-data
 
+platform darwin {
+    pre-fetch {
+        # 10.4.11:
+        # ld: common symbols not allowed with MH_DYLIB output format with the -multi_module option
+        # The usual advice is to use -fno-common (e.g. http://gcc.gnu.org/ml/gcc/2005-06/msg00378.html)
+        # but this leads to several "multiple definitions of symbol" errors.
+        # 10.5.8:
+        # In file included from client/snd_openal.c:37:
+        # client/qal.h:108: error: syntax error before 'pqalcCreateContext'
+        if {${os.major} < 10} {
+            ui_error "Alien Arena requires Mac OS X 10.6 or greater at the moment."
+            return -code error "incompatible Mac OS X version"
+        }
+    }
+}
+
 patch.dir               ${worksrcpath}/source
 
 post-extract {
