--- a/dports/gnome/gpdf/Portfile
+++ b/dports/gnome/gpdf/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name		gpdf
 version		2.10.0
+revision        1
 set branch  [join [lrange [split ${version} .] 0 1] .]
 description	gpdf is a viewer for Portable Document Format (PDF) files.
 long_description   	gpdf is a viewer for Portable Document Format (PDF) files.
