--- a/dports/devel/caml-pcre/Portfile
+++ b/dports/devel/caml-pcre/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name                caml-pcre
 version             6.1.0
+revision            1
 categories          devel ml
 maintainers         landonf openmaintainer
 description         Perl compatibility regular expressions for OCaml
