--- a/dports/graphics/graphviz-devel/Portfile
+++ b/dports/graphics/graphviz-devel/Portfile
@@ -10,6 +10,7 @@ conflicts                       graphviz
 set my_name                     graphviz
 # keep version in sync between graphviz-devel and graphviz-gui-devel
 version                         2.27.20100830.0445
+revision                        1
 categories                      graphics
 maintainers                     ryandesign
 license                         CPLv1.0
