--- a/dports/print/scribus/Portfile
+++ b/dports/print/scribus/Portfile
@@ -4,6 +4,7 @@ PortSystem      1.0
 
 name            scribus
 version         1.3.3.11
+revision        1
 categories      print
 maintainers     nomaintainer
 description     X11-based WYSIWYG desktop publishing application
