--- a/dports/python/py26-impressive/Portfile
+++ b/dports/python/py26-impressive/Portfile
@@ -6,6 +6,7 @@ PortGroup       python26 1.0
 
 name            py26-impressive
 version         0.10.2
+revision        1
 categories      python graphics
 maintainers     nomaintainer
 description     slide presentation tool
