--- a/dports/textproc/wdiff/Portfile
+++ b/dports/textproc/wdiff/Portfile
@@ -1,8 +1,9 @@
 # $Id$
+
 PortSystem 1.0
 
 name		wdiff
-version		0.5
+version		0.6.3
 categories	textproc
 platforms	darwin
 maintainers	fenner
@@ -13,8 +14,15 @@ long_description wdiff compares two files, finding which \
  used to produce an annotated copy of new_file on standard output. \
  Suitable annotations produce a nice display of word differences \
  between the original files.
+
+homepage	http://www.gnu.org/software/wdiff/
 master_sites	gnu
-checksums	md5 7f9c78f5dd6fb4f3dabe28fbd4d14319
+
+checksums	sha1    3138bad5c054632e5fbefa75a97a17c321693dfe \
+		rmd160  c38b7d085c33b05b33b76cd01c6389a44bbe34d0
+
+depends_lib	port:gettext
+
 destroot.destdir prefix=${destroot}${prefix} \
  mandir=${destroot}${prefix}/share/man/man1 \
  infodir=${destroot}${prefix}/share/info
