di: fix livecheck (maintainer timeout); see #25938
git-svn-id: https://svn.macports.org/repository/macports/trunk@71222 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/di/Portfile
+++ b/dports/sysutils/di/Portfile
@@ -27,6 +27,6 @@ build.args		prefix=${prefix} CC="${configure.cc}"
 
 destroot.args	prefix=${destroot}${prefix}
 
-livecheck.type	freshmeat
-livecheck.name	diskinfo
+livecheck.type	regex
+livecheck.regex	${name}-(\[0-9.\]+)\\.tar
 
