sleepwatcher: update license
git-svn-id: https://svn.macports.org/repository/macports/trunk@71224 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/sleepwatcher/Portfile
+++ b/dports/sysutils/sleepwatcher/Portfile
@@ -8,7 +8,7 @@ name                    sleepwatcher
 version                 2.1
 categories              sysutils
 maintainers             ryandesign
-license                 GPL
+license                 GPL-3+
 homepage                http://www.bernhard-baehr.de/
 master_sites            ${homepage}
 distname                ${name}_${version}
