sml-mode.el: Update version 4.0 -> 4.1. Remove version from doc directories.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71228 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/sml-mode.el/Portfile
+++ b/dports/lang/sml-mode.el/Portfile
@@ -4,9 +4,9 @@
 PortSystem 1.0
 
 name               sml-mode.el
-version            4.0
+version            4.1
 categories         lang editors
-maintainers        mcalhoun
+maintainers        mcalhoun openmaintainer
 description        An EMACS major mode for editing Standard ML
 long_description   ${description}
 homepage           http://www.iro.umontreal.ca/~monnier/elisp/
@@ -35,11 +35,11 @@ variant docs description {Install extra documentation} {
     destroot.target-append \
         install_info install_dvi \
         infodir=${destroot}${prefix}/share/info \
-        docdir=${destroot}${prefix}/share/doc/${name}-${version}
+        docdir=${destroot}${prefix}/share/doc/${name}
 	
     post-destroot {
-		xinstall -m 0755 -d ${destroot}${prefix}/share/doc/${name}-${version}
-		eval xinstall -m 0644 [glob ${worksrcpath}/*.ps] ${destroot}${prefix}/share/doc/${name}-${version}
+		xinstall -m 0755 -d ${destroot}${prefix}/share/doc/${name}
+		eval xinstall -m 0644 [glob ${worksrcpath}/*.ps] ${destroot}${prefix}/share/doc/${name}
 	}
 }
 
