py25-simpy: Update version 1.9.1 -> 2.0.1. Add openmaintainer.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71230 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py25-simpy/Portfile
+++ b/dports/python/py25-simpy/Portfile
@@ -5,9 +5,9 @@ PortSystem 1.0
 PortGroup  python25 1.0
 
 name            py25-simpy
-version         1.9.1
+version         2.0.1
 categories      python
-maintainers     mcalhoun
+maintainers     mcalhoun openmaintainer
 platforms		darwin freebsd
 description		python based simulation language
 long_description \
@@ -17,10 +17,10 @@ long_description \
 homepage        http://simpy.sourceforge.net/
 master_sites    sourceforge:simpy
 distname        SimPy-${version}
-checksums \
-    md5 857188f768c4f5fed2ab2b047f21a89c \
-    sha1 7e8d3418ec194da8fd033fec1a0c88ec2915f8e6 \
-    rmd160 e204fb2d81b5d23cb5f67b5c04126d266cef19a9
+
+checksums           md5     5a0cb11440dbc3b02f8311df333323dd \
+                    sha1    4d34bb66faa69938e6f3c3a24089b3307e4d12fd \
+                    rmd160  03f07dbb5a396a715c5cfe02e01084b311167139
 
 post-destroot {
 	file copy ${worksrcpath}/SimPyDocs \
