gegl: disable use of GNU C lib backtrace() facility on Mac OS X 10.4 and earlier where it is not available.  Fixes #26326.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71233 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/gegl/Portfile
+++ b/dports/graphics/gegl/Portfile
@@ -44,7 +44,9 @@ depends_lib \
     path:lib/libavcodec.dylib:ffmpeg \
     port:libspiro
 
-configure.args   --disable-docs
+patchfiles      patch-gegl-buffer-gegl-buffer.c.diff
+
+configure.args  --disable-docs
 
 platform darwin 10 {
     # workaround for ticket #20906
