heimdal: Cleanup comments.
Re: _FORTIFY_SOURCE, it's set by default in SL.  See /usr/include/_types.h


git-svn-id: https://svn.macports.org/repository/macports/trunk@71234 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/heimdal/Portfile
+++ b/dports/net/heimdal/Portfile
@@ -29,7 +29,7 @@ checksums   md5 963c09f1b14c41660be70b55fae9f163 \
 depends_lib port:readline port:gettext
 
 # Use a separate prefix to avoid conflicts with the port kerberos5
-# (and opensll, if that variant is selected)
+# (and openssl, if that variant is selected)
 configure.pre_args --prefix=${prefix}/libexec/heimdal
 configure.args                 \
     --sysconfdir=${prefix}/etc \
@@ -42,11 +42,6 @@ configure.args                 \
     --without-openldap         \
     --without-openssl          \
     --without-sqlite3
-
-# _FORTIFY_SOURCE: gcc extension to detect and prevent a subset of the
-# buffer overflows before they can do damage.  This is the only
-# Portfile that contians a reference to this define; why use it?
-#configure.cflags-append	-D_FORTIFY_SOURCE=0
 
 variant x11 description \
     {Enable X11 use in libraries, and build X11-related applications} {
