- new upstream release - add two variants for perl5.10 and perl5.12 as ikiwiki   no longer seems to run out-of-the-box with perl5.8, make   perl5.12 (the newest) the default. closes #26320
git-svn-id: https://svn.macports.org/repository/macports/trunk@71236 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/ikiwiki/Portfile
+++ b/dports/www/ikiwiki/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 PortGroup perl5 1.0
 
-perl5.setup             ikiwiki 3.20100722
+perl5.setup             ikiwiki 3.20100831
 name                    ikiwiki
 categories              www perl
 description             A wiki compiler.
@@ -22,11 +22,23 @@ worksrcdir              ${name}
 
 patchfiles              patch-Makefile.PL.diff
 
-checksums               md5     c2aa8e0d602efdc7a3e94a81b9465348 \
-                        sha1    4613a82c48253996f858ae47e67e5e562c8272c8 \
-                        rmd160  33770af9aaa3308b2fb53e056ec47ef7a7bd09b8
+checksums               md5     0270ac24e132cf43d96e13e509b1ccdc \
+                        sha1    7aac193e19b572fa8f5395e2cf6fbc8b85d74f39 \
+                        rmd160  958591f586aee203cc122c76b8f746602ae59ae8
 
 depends_build           port:coreutils
+default_variants        +perl512
+set perl_binary ""
+
+variant perl510 conflicts perl512 description "Require an installed Perl 5.10" {
+    depends_build-append    port:perl5.10
+    set perl_binary "perl5.10"
+}
+
+variant perl512 conflicts perl510 description "Require an installed Perl 5.12" {
+    depends_build-append    port:perl5.12
+    set perl_binary "perl5.12"
+}
 
 # needed modules (see Bundle/IkiWiki.pm)
 depends_lib-append      port:p5-cgi-formbuilder \
@@ -59,7 +71,7 @@ destroot.target         CP=gcp install
 configure.args          INSTALLDIRS=vendor PREFIX=${prefix}
 
 post-patch {
-    reinplace "s|/usr/bin/perl|${prefix}/bin/perl|g" \
+    reinplace "s|/usr/bin/perl|${prefix}/bin/${perl_binary}|g" \
         ${worksrcpath}/ikiwiki.in \
         ${worksrcpath}/IkiWiki.pm \
         ${worksrcpath}/Makefile.PL \
