heimdal: Tiger doesn't have the CommonCrypto support needed to build, so use openssl
git-svn-id: https://svn.macports.org/repository/macports/trunk@71237 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/heimdal/Portfile
+++ b/dports/net/heimdal/Portfile
@@ -79,6 +79,11 @@ variant sqlite3 description \
     configure.args-append  --with-sqlite3=${prefix}
 }
 
+# Tiger does not have the CommonCrypto support needed for -openssl
+if {${os.platform} == "darwin" && ${os.major} < 9} {
+    default_variants +openssl
+}
+
 test.run	yes
 test.target	check
 
