only make perl5.12 the default if perl5.10 wasn't explicitely requested (thanks Ryan for the fix)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71241 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/ikiwiki/Portfile
+++ b/dports/www/ikiwiki/Portfile
@@ -5,6 +5,7 @@ PortGroup perl5 1.0
 
 perl5.setup             ikiwiki 3.20100831
 name                    ikiwiki
+revision                1
 categories              www perl
 description             A wiki compiler.
 long_description        Ikiwiki is a wiki compiler. It converts wiki pages \
@@ -27,7 +28,11 @@ checksums               md5     0270ac24e132cf43d96e13e509b1ccdc \
                         rmd160  958591f586aee203cc122c76b8f746602ae59ae8
 
 depends_build           port:coreutils
-default_variants        +perl512
+
+if {![variant_isset perl510]} {
+    default_variants    +perl512
+}
+
 set perl_binary ""
 
 variant perl510 conflicts perl512 description "Require an installed Perl 5.10" {
