--- a/dports/net/heimdal/Portfile
+++ b/dports/net/heimdal/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name		heimdal
 version		1.3.3
+revision        1
 categories	net security
 maintainers	landonf openmaintainer
 platforms	darwin
@@ -63,13 +64,14 @@ variant openldap description \
     configure.args-append  --with-openldap=${prefix}
 }
 
-variant openssl description \
-    {Use OpenSSL libraries instead of internal ones for \
-         crypto and ssl related functions} {
-    depends_lib-append     port:openssl
-    configure.args-delete  --without-openssl
-    configure.args-append  --with-openssl=${prefix}
-}
+# heimdal fails with openssl-1.0.0a due to removal of md2
+#variant openssl description \
+#    {Use OpenSSL libraries instead of internal ones for \
+#         crypto and ssl related functions} {
+#    depends_lib-append     port:openssl
+#    configure.args-delete  --without-openssl
+#    configure.args-append  --with-openssl=${prefix}
+#}
 
 variant sqlite3 description \
     {Enable SQlite3 database support for keeping track \
@@ -79,9 +81,11 @@ variant sqlite3 description \
     configure.args-append  --with-sqlite3=${prefix}
 }
 
-# Tiger does not have the CommonCrypto support needed for -openssl
-if {${os.platform} == "darwin" && ${os.major} < 9} {
-    default_variants +openssl
+post-patch {
+	# Tiger does not have the CommonCrypto support needed for -openssl
+	if {${os.platform} == "darwin" && ${os.major} < 9} {
+		reinplace "s:def __APPLE__: 0:" ${worksrcpath}/lib/hcrypto/evp-cc.c
+	}
 }
 
 test.run	yes
