teg: update homepage, dependencies, configuration, install scrollkeeper help files and gconf schemas post-activate.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71246 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/teg/Portfile
+++ b/dports/games/teg/Portfile
@@ -1,3 +1,4 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:filetype=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem 1.0
@@ -12,7 +13,7 @@ long_description \
                 Tenes Empanadas Graciela (TEG) is a clone of 'Plan Tactico y \
                 Estrategico de la Guerra', which is a pseudo-clone of Risk, \
                 a multiplayer turn-based strategy game.
-homepage        http://teg.sourceforge.net/
+homepage        http://sourceforge.net/projects/teg/
 platforms	    darwin
 
 master_sites    sourceforge:teg
@@ -20,58 +21,32 @@ checksums       md5 1ec1ac9bd023b329b1e4a32bb48c9132 \
 				sha1 29fe2fa895617d6d6fe9528bf56b43d22bd454f5 \
 				rmd160 2069bb40936fbd87dcf04be145890d0ccb53f6d3
 
-configure.args	--sysconfdir=${destroot}${prefix}/etc
-configure.cppflags-append	"-I${prefix}/include/libxml2"
+configure.args	--with-readline \
+                --enable-ggz=no
 
 depends_build \
-	path:bin/autoconf:autoconf \
-	path:bin/pkg-config:pkgconfig
+	port:pkgconfig \
+        port:intltool \
+	port:rarian
 
 depends_lib	\
-	bin:gettext:gettext \
-	bin:makeinfo:texinfo \
-	lib:fontconfig:fontconfig \
-	lib:libart_lgpl_2:libart_lgpl \
-	lib:libatk-1.0:atk \
-	lib:libbonoboui-2:libbonoboui \
-	lib:libbonono-2:libbonobo \
-	lib:libexpat:expat \
-	lib:libgconf-2:gconf \
-	lib:libglib-2.0:glib2 \
-	lib:libgnome-2:libgnome \
-	lib:libgnomecanvas-2:libgnomecanvas \
-	lib:libgnomeui-2:libgnomeui \
-	lib:libgnomevfs-2:gnome-vfs \
-	lib:libgtk-x11-2.0:gtk2 \
-	lib:libintl:libiconv \
-	lib:libjpeg:jpeg \
-	lib:libORBit-2:orbit2 \
-	lib:libpango-1.0:pango \
-	lib:libpng12.0:libpng \
-	lib:libpopt:popt \
-	lib:libreadline:readline \
-	lib:libtiff.3:tiff \
-	port:Xft2 \
-	port:xrender \
-	lib:libz:zlib \
-	lib:ligtiff:tiff \
-	port:audiofile \
-	port:esound \
-	port:freetype \
-	port:libgnome-keyring \
-	port:openssl \
-	port:p5-xml-parser \
-	port:rarian \
-	port:libxml2
+	port:libgnomeui \
+	port:readline
 
 pre-destroot {
 	file mkdir "${destroot}${prefix}/etc/gconf/gconf.xml.defaults/"
 	file mkdir "${destroot}${prefix}/etc/gconf/gconf.xml.defaults/apps/"
-	file mkdir "${destroot}${prefix}/etc/gconf/gconf.xml.defaults/shemas/apps/"
+	file mkdir "${destroot}${prefix}/etc/gconf/gconf.xml.defaults/schemas/apps/"
 }
 
 post-destroot {
 	file delete -force ${destroot}${prefix}/etc/gconf/gconf.xml.defaults/apps/%gconf.xml
 	file delete -force ${destroot}${prefix}/etc/gconf/gconf.xml.defaults/schemas/%gconf.xml
 	file delete -force ${destroot}${prefix}/etc/gconf/gconf.xml.defaults/schemas/apps/%gconf.xml
+}
+
+post-activate    {
+    system "${prefix}/bin/scrollkeeper-update"
+    system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
+        gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
