--- a/dports/devel/libffi/Portfile
+++ b/dports/devel/libffi/Portfile
@@ -23,7 +23,12 @@ long_description    libffi library provides a portable, high level \
                     compiled code.
 
 homepage            http://sources.redhat.com/libffi/
-master_sites        ftp://sourceware.org/pub/libffi
+master_sites        http://mirrors.kernel.org/sources.redhat.com/libffi/ \
+                    http://www.mirrorservice.org/sites/sourceware.org/pub/libffi/ \
+                    http://ftp-stud.fht-esslingen.de/pub/Mirrors/sourceware.org/libffi/ \
+                    http://mirror.aarnet.edu.au/pub/sourceware/libffi/ \
+                    http://ftp.cs.pu.edu.tw/Linux/sourceware/libffi/ \
+                    ftp://sourceware.org/pub/libffi/
 checksums           md5     1f300a7a7f975d4046f51c3022fa5ff1 \
                     sha1    56e41f87780e09d06d279690e53d4ea2c371ea88 \
                     rmd160  11ff9aeb62f4fbe1fecf09e6f9814a72bfedb37a
