cairo-devel: glitz is gone, OpenGL is here
git-svn-id: https://svn.macports.org/repository/macports/trunk@71249 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/cairo-devel/Portfile
+++ b/dports/graphics/cairo-devel/Portfile
@@ -60,7 +60,7 @@ pre-configure {
     }
 }
 
-configure.args              --disable-glitz \
+configure.args              --disable-gl \
                             --disable-quartz \
                             --disable-quartz-font \
                             --disable-quartz-image \
@@ -76,11 +76,11 @@ configure.args              --disable-glitz \
                             --x-include=${prefix}/include \
                             --x-lib=${prefix}/lib
 
-variant glitz conflicts no_x11 description {Add glitz graphics interface} {
-    depends_lib-append      port:glitz
-    archcheck.files-append  lib/libglitz.dylib
-    configure.args-delete   --disable-glitz
-    configure.args-append   --enable-glitz
+variant opengl conflicts no_x11 description {Add OpenGL graphics interface} {
+    depends_lib-append      port:mesa
+    archcheck.files-append  lib/libGL.dylib
+    configure.args-delete   --disable-gl
+    configure.args-append   --enable-gl
 }
 
 platform macosx {}
