--- a/dports/graphics/cairo-devel/Portfile
+++ b/dports/graphics/cairo-devel/Portfile
@@ -95,7 +95,7 @@ variant quartz {
 }
 }
 
-variant no_x11 conflicts glitz x11_xcb {
+variant no_x11 conflicts opengl x11_xcb {
     depends_lib-delete      port:xrender
     archcheck.files-delete  lib/libXrender.dylib
     configure.args-delete   --enable-xlib \
