--- a/dports/graphics/cairo/Portfile
+++ b/dports/graphics/cairo/Portfile
@@ -9,7 +9,7 @@ PortGroup                   xcodeversion 1.0
 name                        cairo
 conflicts                   cairo-devel
 set my_name                 cairo
-version                     1.8.10
+version                     1.10.0
 categories                  graphics
 maintainers                 ryandesign
 license                     LGPLv2.1/MPLv1.1
@@ -27,9 +27,9 @@ long_description            Cairo is ${description}. It's designed to produce \
                             advantage of display hardware acceleration when \
                             available (e.g. through the X Render Extension).
 
-checksums                   md5     b60a82f405f9400bbfdcf850b1728d25 \
-                            sha1    fd5e8ca82ff0e8542ea4c51612cad387f2a49df3 \
-                            rmd160  9538baf30f812b950beeb93893f46d1223fb44ce
+checksums                   md5     70a2ece66cf473d976e2db0f75bf199e \
+                            sha1    efe7e47408d5188690228ccadc8523652f6bf702 \
+                            rmd160  fa65d4f3926308857d13f3ed0c100f89f075dc01
 
 depends_build               port:pkgconfig
 
@@ -60,7 +60,7 @@ pre-configure {
     }
 }
 
-configure.args              --disable-glitz \
+configure.args              --disable-gl \
                             --disable-quartz \
                             --disable-quartz-font \
                             --disable-quartz-image \
@@ -76,11 +76,11 @@ configure.args              --disable-glitz \
                             --x-include=${prefix}/include \
                             --x-lib=${prefix}/lib
 
-variant glitz conflicts no_x11 description {Add glitz graphics interface} {
-    depends_lib-append      port:glitz
-    archcheck.files-append  lib/libglitz.dylib
-    configure.args-delete   --disable-glitz
-    configure.args-append   --enable-glitz
+variant opengl conflicts no_x11 description {Add OpenGL graphics interface} {
+    depends_lib-append      port:mesa
+    archcheck.files-append  lib/libGL.dylib
+    configure.args-delete   --disable-gl
+    configure.args-append   --enable-gl
 }
 
 platform macosx {}
@@ -95,7 +95,7 @@ variant quartz {
 }
 }
 
-variant no_x11 conflicts glitz x11_xcb {
+variant no_x11 conflicts opengl x11_xcb {
     depends_lib-delete      port:xrender
     archcheck.files-delete  lib/libXrender.dylib
     configure.args-delete   --enable-xlib \
