xorg-server-devel: Add docs variant
This should help avoid pulling in doxygen and family now that util-macros are
a bit better at supporting this.


git-svn-id: https://svn.macports.org/repository/macports/trunk@71254 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-server-devel/Portfile
+++ b/dports/x11/xorg-server-devel/Portfile
@@ -6,6 +6,7 @@ name		xorg-server-devel
 conflicts       xorg-server
 set my_name	xorg-server
 version		1.9.0
+revision	1
 categories	x11 devel
 maintainers	jeremyhu openmaintainer
 description	The X.org / Xquartz X server.
@@ -47,11 +48,7 @@ depends_build \
 	port:xorg-xextproto \
 	port:xorg-xineramaproto \
 	port:xorg-xtrans \
-	port:autoconf \
-	port:automake \
-	port:libtool \
-	port:xorg-util-macros \
-	port:doxygen
+	port:xorg-util-macros
 
 depends_skip_archcheck doxygen
 
@@ -72,6 +69,9 @@ depends_lib \
 configure.args --with-apple-applications-dir=${applications_dir} \
 	--with-launchd-id-prefix=org.macports \
 	--without-dtrace \
+	--without-doxygen \
+	--without-fop \
+	--without-xmlto \
 	--with-sha1=CommonCrypto
 
 # GL/internal/dri_interface.h is missing in prefix (provided by libdrm for the xorg DDX... not helpful for us)
@@ -109,4 +109,21 @@ platform macosx {
 		# Xplugin.h is missing on Tiger
 		configure.cppflags-append -I${filespath}/include
 	}
+}
+
+variant docs description "Install extra documentation" {
+	depends_build-append \
+		port:doxygen \
+		port:fop \
+		port:xmlto
+
+	configure.args-delete \
+		--without-doxygen \
+		--without-fop \
+		--without-xmlto
+
+	configure.args-append \
+		--with-doxygen=${prefix}/bin/doxygen \
+		--with-fop=${prefix}/bin/fop \
+		--with-xmlto=${prefix}/bin/xmlto
 }
