xorg-server-devel: Also pass --disable-devel-docs for completeness
git-svn-id: https://svn.macports.org/repository/macports/trunk@71255 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-server-devel/Portfile
+++ b/dports/x11/xorg-server-devel/Portfile
@@ -72,6 +72,7 @@ configure.args --with-apple-applications-dir=${applications_dir} \
 	--without-doxygen \
 	--without-fop \
 	--without-xmlto \
+	--disable-devel-docs \
 	--with-sha1=CommonCrypto
 
 # GL/internal/dri_interface.h is missing in prefix (provided by libdrm for the xorg DDX... not helpful for us)
@@ -120,10 +121,17 @@ variant docs description "Install extra documentation" {
 	configure.args-delete \
 		--without-doxygen \
 		--without-fop \
-		--without-xmlto
+		--without-xmlto \
+		--disable-devel-docs 
 
 	configure.args-append \
-		--with-doxygen=${prefix}/bin/doxygen \
-		--with-fop=${prefix}/bin/fop \
-		--with-xmlto=${prefix}/bin/xmlto
+		--with-doxygen
+		--with-fop \
+		--with-xmlto \
+		--enable-devel-docs
+
+	configure.env-append \
+		DOXYGEN="${prefix}/bin/doxygen" \
+		FOP="${prefix}/bin/fop" \
+		XMLTO="${prefix}/bin/xmlto"
 }
