xorg-libX11: Force on the xcb backend and create a docs variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@71256 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-libX11/Portfile
+++ b/dports/x11/xorg-libX11/Portfile
@@ -5,6 +5,7 @@ PortGroup archcheck 1.0
 
 name		xorg-libX11
 version		1.3.5
+revision	1
 categories	x11 devel
 maintainers	jeremyhu openmaintainer
 description	X.org libX11
@@ -39,16 +40,35 @@ archcheck.files lib/libXdmcp.dylib \
 
 configure.env-append RAWCPP=${configure.cpp}
 
-# Depending on ghostscript for the PDF documentation creates a dependency
-# loop, so we just don't build the specs. #23413
-configure.args  --without-xcb --disable-specs
-variant x11_xcb description "use XCB for low-level protocol implementation" {
-	depends_lib-append port:xorg-libxcb
-	configure.args-delete --without-xcb
-	configure.args-append --with-xcb
-}
+configure.args \
+	--with-xcb \
+	--without-groff \
+	--without-ps2pdf \
+	--disable-specs
 
 build.args V=1
+
+# Depending on ghostscript for the PDF documentation creates a dependency
+# loop, so you may want to install first without the docs variant
+variant docs description "Install extra documentation" {
+	depends_build-append \
+		port:groff \
+		port:ps2pdf
+
+	configure.args-delete \
+		--without-groff \
+		--without-ps2pdf \
+		--disable-specs
+
+	configure.args-append \
+		--with-groff \
+		--with-ps2pdf \
+		--enable-specs
+
+	configure.env-append \
+		GROFF="${prefix}/bin/groff" \
+		PS2PDF="${prefix}/bin/ps2pdf"
+}
 
 livecheck.type  regex
 livecheck.url   [lindex ${master_sites} 0]?C=M&O=D
