--- a/dports/x11/xorg-libX11/Portfile
+++ b/dports/x11/xorg-libX11/Portfile
@@ -32,11 +32,13 @@ depends_build   port:pkgconfig \
 
 depends_lib     port:xorg-libXdmcp \
                 port:xorg-libXau \
+                port:xorg-libxcb \
                 port:xorg-xproto \
                 port:xorg-kbproto
 
 archcheck.files lib/libXdmcp.dylib \
-                lib/libXau.dylib
+                lib/libXau.dylib \
+                lib/libxcb.dylib
 
 configure.env-append RAWCPP=${configure.cpp}
 
