xorg-server-devel: Add fop and xmlto to depends_skip_archcheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@71259 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-server-devel/Portfile
+++ b/dports/x11/xorg-server-devel/Portfile
@@ -50,8 +50,6 @@ depends_build \
 	port:xorg-xtrans \
 	port:xorg-util-macros
 
-depends_skip_archcheck doxygen
-
 # This xinit dependency needs to be port: not bin: because we specifically run ${prefix}/bin/startx from bundle-main.c
 depends_run \
 	port:xinit \
@@ -129,6 +127,11 @@ variant docs description "Install extra documentation" {
 		--with-fop \
 		--with-xmlto \
 		--enable-devel-docs
+
+	depends_skip_archcheck-append \
+		doxygen \
+		fop \
+		xmlto
 
 	configure.env-append \
 		DOXYGEN="${prefix}/bin/doxygen" \
