xorg-libX11: Don't archcheck groff or ps2pdf
git-svn-id: https://svn.macports.org/repository/macports/trunk@71260 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-libX11/Portfile
+++ b/dports/x11/xorg-libX11/Portfile
@@ -57,6 +57,10 @@ variant docs description "Install extra documentation" {
 		port:groff \
 		port:ps2pdf
 
+	depends_skip_archcheck-append \
+		groff \
+		ps2pdf
+
 	configure.args-delete \
 		--without-groff \
 		--without-ps2pdf \
