--- a/dports/x11/xorg-libxcb/Portfile
+++ b/dports/x11/xorg-libxcb/Portfile
@@ -56,6 +56,6 @@ variant python32 conflicts python25 python26 python27 python31 description {Use 
 }
 
 # Default to 2.6 since 2.5 fails universal on Leopard... Ticket #17501
-if {![variant_isset python25] && ![variant_isset python31]} {
+if {![variant_isset python25] && ![variant_isset python27] && ![variant_isset python31] && ![variant_isset python32]} {
     default_variants +python26
 }
